Fix various layout issues.

--- a/themes/greatermedia/assets/css/greater_media.css
+++ b/themes/greatermedia/assets/css/greater_media.css
@@ -6295,9 +6295,7 @@ a.podcast__rss:active {
   border: 1px solid #d0d2d3;
   border-width: 1px 0;
   margin: 1.5em 0;
-  padding: 1.5em 0;
-  float: left;
-  width: 100%;
+  padding: 1em 0;
   display: table; }
   .podcast-player--compact .podcast__play,
   .podcast-player--compact .podcast__meta {
@@ -6306,14 +6304,20 @@ a.podcast__rss:active {
     width: auto;
     vertical-align: middle; }
   .podcast-player--compact .podcast__play {
+    width: 1px; }
+  .podcast-player--compact .podcast__cover {
     width: 50px;
-    border-width: 2px; }
-  .podcast-player--compact .podcast__btn--play {
+    height: 50px;
+    padding: 0; }
+  .podcast-player--compact .podcast__btn--play,
+  .podcast-player--compact .podcast__btn--pause {
+    border-width: 2px;
     width: 100%;
     height: 100%;
     left: 0;
     top: 0; }
-    .podcast-player--compact .podcast__btn--play:before {
+    .podcast-player--compact .podcast__btn--play:before,
+    .podcast-player--compact .podcast__btn--pause:before {
       font-size: 150%; }
   .podcast-player--compact .podcast__runtime {
     position: absolute;
@@ -6335,20 +6339,27 @@ a.podcast__rss:active {
     display: none; }
   @media screen and (min-width: 768px) {
     .podcast-player--compact .podcast-player {
-      margin: 20px 5px;
-      max-width: 67%; }
+      padding: 1.5em .5em; }
     .podcast-player--compact .podcast__runtime {
       display: block; }
-    .podcast-player--compact .podcast__btn--play {
+    .podcast-player--compact .podcast__cover {
       width: 80px;
+      height: 80px;
+      padding: 0; }
+    .podcast-player--compact .podcast__btn--play,
+    .podcast-player--compact .podcast__btn--pause {
       border-width: 3px; }
-      .podcast-player--compact .podcast__btn--play:before {
+      .podcast-player--compact .podcast__btn--play:before,
+      .podcast-player--compact .podcast__btn--pause:before {
         font-size: 200%; }
     .podcast-player--compact .podcast__meta {
       padding-left: 1.5em;
       padding-right: 8em; }
     .podcast-player--compact .podcast__title {
       font-size: 1.80203em; } }
+  @media screen and (min-width: 1024px) {
+    .podcast-player--compact .podcast-player {
+      max-width: 60%; } }
 
 .single-show .featured__content {
   margin: 0.75em 0 1em; }
